fixed image alignment css

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -763,7 +763,7 @@ sub {
 img.align-left, .caption.align-left,
 img.align-right, .caption.align-right {
 	max-width: 100% !important;
-	margin: $margin-medium auto !important;
+	margin: $margin-medium auto;
 }
 
 
